--- a/11.toolchain/笔记.md
+++ b/11.toolchain/笔记.md
@@ -1,6 +1,57 @@
-工具链：为 JS 的生产环境制作一套工具链，来覆盖前端开发的各个环节。
-脚手架：generator，YEOMAN-脚手架的生成器（generator 的 generator）
+1. 工具链：为 JS 的生产环境制作一套工具链，来覆盖前端开发的各个环节。
+2. 脚手架：generator，YEOMAN-脚手架的生成器（generator 的 generator）
+3. build：同时为发布和开发服务 (webpack 和 babel 都分了两个：core+cli)
+4. 测试工具：mocha, jset (测试框架+coverage)
+
+## note
 
 - `npm init` 创建 package.json
 - `npm link` 会将本地“正在开发中”的模块，link 到 npm 的标准模块里
   - eg.`symlink 'generator-toolchain' -> '/usr/local/lib/node_modules/generator-toolchain'`
+
+## webpack
+
+webpack 最初是为 node 设计的打包工具，能力是将 node 代码打包成浏览器可用的代码。
+所以最初的设计是完全针对 js 的系统（并没有考虑 html）。
+有些打包的后起之秀，是针对 html 打包的，所以配置相对 webpack 来说就很简单。
+
+所以虽然 webpack 是最流行的打包工具，但是它总跟 web 开发有那么些使用别扭的地方。它是最终打包出一个 js 文件，然后手动放在 html 文件里。
+
+以上是 webpack 的核心思路。webpack 能帮我们做多文件合并，且合并的过程中各种 loader 和 plugin 能帮做文本的转换和改变合并的规则。
+
+需要安两个工具：**webpack-cli** 和 **webpack**。
+
+- 可以全局安装
+- 也可以只在项目里安装，即用**npx**。比较新的 npm 都支持了 npx，所以可以`npx webpack`。很多库和 nodejs 社区都推荐使用 npx。
+  - `npm install webpack-cli --save-dev`
+  - `npx webpack`
+
+### webpack.config.js
+
+- entry：单文件或多文件（多打包几个文件）。但一次 webpack 的整个过程就只支持一个文件，及其它所有依赖文件的打包。
+- output：
+- loader：是 webpack 的灵魂，比如 babel-loader, css-loader, view-loader
+  - 它只是 export 了个文件出去（详见“写个 loader”）。可以用 node 风格、也可以用最新的 export 语句
+  - 将一个 source 变成目标代码，纯粹的文本转换
+
+> plugin 更像是个独立的机制
+
+## babel
+
+babel 是完全独立于 webpack 的一个系统，它是将 JS 的新版本编译成老版本。它的体系比较复杂。
+
+- @babel/core
+- @babel/cli
+
+### .babelrc
+
+- presets：babel 的配置非常繁琐，所以它把一些常用的一套套配置存成了 preset。比如`@babel/preset-env`（需要单独安装）里就有各种 plugin 和 transform。
+
+```json
+{
+  "presets": ["@babel/preset-env"]
+}
+```
+
+当 babel 独立使用的时候，就直接在命令行敲 `babel input.js` or `babel input.js > output.js`。
+但更多时候，我们是用 babel-loader，即将 babel 用在 webpack 打包的过程中，批量应用于每个 JS 文件。
